# src/task/task.controller.ts
@@ -1,7 +1,10 @@
-import { Controller, Get, Post, Body, Put, Param, Delete, UseGuards } from '@nestjs/common';
+import { Controller, Get, Post, Body, Put, Param, Delete, UseGuards, Request } from '@nestjs/common';
 import { TaskService } from './task.service';
-import { Task as TaskModel, TaskStatus } from '@prisma/client';
+import { Prisma, Task as TaskModel, TaskStatus } from '@prisma/client';
 import { JwtAuthGuard } from '../auth/jwt-auth.guard';
+import { GetUser } from '../auth/get-user.decorator';
+import { AuthUser } from '../auth/get-user.decorator';
+import { PermissionLevel } from '@prisma/client';
 
 @Controller('tasks')
 @UseGuards(JwtAuthGuard)
@@ -9,13 +12,8 @@ export class TaskController {
   constructor(private readonly taskService: TaskService) {}
 
   @Get('projects')
-  async getProjects(): Promise<{ [project: string]: TaskModel[] }> {
-    return this.taskService.getUserProjects();
-  }
-
-  @Get()
-  async getTasks(): Promise<TaskModel[]> {
-    return this.taskService.tasks();
+  async getProjects(@GetUser() user: AuthUser): Promise<{ [project: string]: TaskModel[] }> {
+    return this.taskService.getUserProjects(user.userId);
   }
 
   @Get(':id')
@@ -25,17 +23,10 @@ export class TaskController {
 
   @Post()
   async createTask(
-    @Body() taskData: { 
-      title: string; 
-      project: string; 
-      description?: string;
-      status?: TaskStatus;
-      priority?: number;
-      deadline?: Date;
-      list?: string;
-    },
+    @Body() taskData: Prisma.TaskCreateInput,
+    @GetUser() user: AuthUser
   ): Promise<TaskModel> {
-    return this.taskService.createTask(taskData);
+    return this.taskService.createTask(taskData, user.userId);
   }
 
   @Put(':id')
@@ -60,5 +51,13 @@ export class TaskController {
   @Delete(':id')
   async deleteTask(@Param('id') id: string): Promise<TaskModel> {
     return this.taskService.deleteTask({ id: Number(id) });
+  }
+
+  @Post('permissions')
+  async createTaskPermission(
+    @Body() createPermissionDto: { userId: number; taskId: number; role: PermissionLevel }
+  ): Promise<void> {
+    const { userId, taskId, role } = createPermissionDto;
+    await this.taskService.createTaskPermission(userId, taskId, role);
   }
 }
